src/styles.css
@import 'animate.css';
@import 'tailwindcss';
@import './assets/_variables.css';

@theme {
    --breakpoint-xs: 30rem; /* 480px */
}

@plugin "daisyui" {
   /* exclude: rootscrollgutter;*/
}

@plugin "@tailwindcss/typography";

@plugin "daisyui/theme" {
    name: 'light';
    default: true;
    --color-primary: #61399c;
    --color-primary-dark: #3c2361;
    --color-primary-content: #fff;
    --color-secondary: teal;
    --color-background: #fffcef;
    --color-background-secondary: #fdf8e2;
}

@plugin "daisyui/theme" {
    name: 'dark';
    color-scheme: dark;
    --color-primary: #9b7fd4;
    --color-primary-dark: #61399c;
    --color-primary-content: #fff;
    --color-secondary: #2dd4bf;
    --color-background: #14141c;
    --color-background-secondary: #1c1c28;
}


html {
    font-family: "Montserrat", sans-serif;
    font-optical-sizing: auto;
    background-color: var(--color-base-100);
}

.modal {
    color: initial !important;
}

.btn {
    border-radius: 0.75rem;
}


.blob-wrapper {
    left: calc(var(--spacing) * 0);
    top: calc(var(--spacing) * 0);
    z-index: -1;
}

.blob-left,
.blob-right {
    position: absolute;
    border-radius: 9999px;
    filter: blur(120px);
}

/* Left blob */
.blob-left {
    top: calc(var(--spacing, 1rem) * 32);
    left: calc(var(--spacing, 1rem) * -20);
    width: calc(var(--spacing, 1rem) * 96);
    height: calc(var(--spacing, 1rem) * 96);
    background-image: linear-gradient(
        to bottom right,
        color-mix(in oklab, var(--color-primary, #3b82f6) 40%, transparent),
        color-mix(in oklab, var(--color-primary, #3b82f6) 15%, transparent)
    );

    /* fallback for old browsers */
    background-image: linear-gradient(
        to bottom right,
        rgba(59, 130, 246, 0.2),
        rgba(59, 130, 246, 0.05)
    );
}

/* Right blob */
.blob-right {
    right: calc(var(--spacing, 1rem) * 10);
    bottom: calc(var(--spacing, 1rem) * 20);
    width: calc(var(--spacing, 1rem) * 72);
    height: calc(var(--spacing, 1rem) * 72);
    background-image: linear-gradient(
        to bottom right,
        color-mix(in oklab, var(--color-secondary, #ec4899) 40%, transparent),
        color-mix(in oklab, var(--color-secondary, #ec4899) 15%, transparent)
    );

    /* fallback for old browsers */
    background-image: linear-gradient(
        to bottom right,
        rgba(236, 72, 153, 0.2),
        rgba(236, 72, 153, 0.05)
    );
}

